# detection_filters

./: CMakeLists.txt  README.md  package.xml
src/: pose_offset.cpp  pose_region_filter.cpp  score_filter.cpp
